--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
-            ],
+              "node_modules/@ngneat/hot-toast/src/styles/styles.css"
+              ],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
