--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
-    "@ngneat/hot-toast": "^6.1.0",
+    "@ngneat/hot-toast": "^7.0.0",
+    "@ngneat/overview": "^6.0.0",
     "express": "^4.18.2",
     "firebase": "^10.12.2",
     "primeng": "^17.18.1",
