--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Angular-website": {
+    "snippet": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/Angular-website",
+            "outputPath": "dist/snippet",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -29,7 +29,7 @@
             "styles": [
               "src/styles.css",
               "node_modules/@ngneat/hot-toast/src/styles/styles.css"
-              ],
+            ],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "Angular-website:build:production"
+              "buildTarget": "snippet:build:production"
             },
             "development": {
-              "buildTarget": "Angular-website:build:development"
+              "buildTarget": "snippet:build:development"
             }
           },
           "defaultConfiguration": "development"
