--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-bin",
+  "name": "snippet",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:code-bin": "node dist/code-bin/server/server.mjs"
+    "serve:ssr:snippet": "node dist/snippet/server/server.mjs"
   },
   "private": true,
   "dependencies": {
